# gmqcc

./: CMakeLists.txt  parser.cpp  readme.md
tests/: enum.qc  enum.tmpl
